src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A08.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A08 {
  interface I;
  enum E;
  class C1 extends I;
  class C2 extends E;
  
}